// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders correctly with a callback and a label 1`] = `
<button
  className="wds-button"
  disabled={false}
  onClick={[Function]}
>
  a button
</button>
`;

exports[`Button renders correctly with a children 1`] = `
<button
  className="wds-button"
  disabled={false}
>
  <strong>
    bold
  </strong>
   text
</button>
`;

exports[`Button renders correctly with custom types values 1`] = `
<button
  className="wds-button"
  disabled={true}
>
  disabled
</button>
`;

exports[`Button renders correctly with custom types values 2`] = `
<button
  className="wds-button wds-is-secondary"
  disabled={false}
>
  secondary
</button>
`;

exports[`Button renders correctly with custom types values 3`] = `
<button
  className="wds-button wds-is-text"
  disabled={false}
>
  text
</button>
`;

exports[`Button renders correctly with custom types values 4`] = `
<button
  className="wds-button wds-is-square"
  disabled={false}
>
  …
</button>
`;

exports[`Button renders correctly with custom types values 5`] = `
<button
  className="wds-button wds-is-squished"
  disabled={false}
>
  squished
</button>
`;

exports[`Button renders correctly with custom types values 6`] = `
<button
  className="wds-button wds-is-secondary wds-is-squished"
  disabled={false}
>
  secondary squished
</button>
`;

exports[`Button renders correctly with custom types values 7`] = `
<button
  className="wds-button wds-is-stretched"
  disabled={false}
>
  stretched
</button>
`;

exports[`Button renders correctly with custom types values 8`] = `
<button
  className="wds-button custom-class"
  disabled={false}
>
  with custom class name
</button>
`;

exports[`Button renders correctly with default values 1`] = `
<button
  className="wds-button"
  disabled={false}
/>
`;
